--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" >
 <head>
 <meta charset="UTF-8">
-<title>Название страницы - отображается на вкладке браузера и в поиске 666666</title>
+<title>Название страницы - отображается на вкладке браузера и в поиске </title>
 <style type="text/css">
 a{
 color: #fff;
@@ -208,7 +208,7 @@ LOGO
 <div class="box">
 <div class="box-base">
 <h1>Заголовок 1</h1>
-<p>Здесь расположен осмысленный текст и самом важном продукте на свете...</p>
+<p>Здесь расположен осмысленный текст о самом важном продукте на свете...TEST</p>
 </div>
 <div class="box-side">
 <div class="sqr">
